--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 /USAMinTIC/Java/Reto3/nbproject/private/
+/USAMinTIC/Java/Reto3 - copia/nbproject/private/
+/USAMinTIC/Java/Reto5/nbproject/private/
